туалет на фоне саратова может двигаться вверх и вниз

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-hi
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>0</title>
+	<!-- <script src="//yandex.ru/games/sdk/v2"></script> -->
+	<link href="./style.css?c=103" rel="stylesheet">
+</head>
+<body>
+	<div id="rotate">
+		<div>
+			<img src="./assets/rotate.png">
+			<br>
+			Переверни устройство
+		</div>
+	</div>
+
+	<div id="app">
+		<canvas></canvas>
+	</div>
+
+	<script src="./lib/pixi.min.js"></script>
+	<script type="module" src="./index.js?v=32"></script>
+</body>
+</html>
