--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	</div>
 
 	<script src="./lib/pixi.min.js"></script>
+	<script src="./lib/pixi-sound.js"></script>
 	<script type="module" src="./index.js?v=32"></script>
 </body>
 </html>
