главное меню, экран смерти, реплей

--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
 		</div>
 	</div>
 
+	<div id="menu" class="screen">
+		<div class="col">
+			<button id="play">Играть</button>
+		</div>
+	</div>
+
+	<div id="gameover" class="screen" style="display: none;">
+		<div class="col">
+			<div>тут ящик телевизора</div>
+			<div>
+				<button id="continue">
+					Продолжить
+				</button>
+			</div>
+		</div>	
+		<div class="col">
+			<div>тут грустный туалет</div>
+			<div>
+				<button id="exit" class="danger">
+					Выход
+				</button>
+			</div>
+		</div>
+	</div>
+
 	<div id="app">
 		<canvas></canvas>
 	</div>
