--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<div id="gameover" class="screen" style="display: none;">
 		<div class="col">
-			<div>тут ящик телевизора</div>
+			<div><img style="max-width: 512px" src="./assets/ads.png"></div>
 			<div>
 				<button id="continue">
 					Продолжить
@@ -32,7 +32,7 @@
 			</div>
 		</div>	
 		<div class="col">
-			<div>тут грустный туалет</div>
+			<div><img style="max-width: 512px" src="./assets/ads.png"></div>
 			<div>
 				<button id="exit" class="danger">
 					Выход
