--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<div id="gameover" class="screen" style="display: none;">
 		<div class="col">
-			<div><img style="max-width: 512px" src="./assets/ads.png"></div>
+			<div><img style="max-width: 512px" src="./assets/ADS.png"></div>
 			<div>
 				<button id="continue">
 					Продолжить
