--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</div>
 		</div>	
 		<div class="col">
-			<div><img style="max-width: 512px" src="./assets/ads.png"></div>
+			<div><img style="max-width: 512px" src="./assets/ads2.png"></div>
 			<div>
 				<button id="exit" class="danger">
 					Выход
