--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<div id="menu" class="screen">
 		<div class="col">
-			<button id="play">Играть</button>
+			<button id="play" autofocus>Играть</button>
 		</div>
 	</div>
 
